I don't even know anymore

--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -64,7 +64,7 @@
     <label><span id="enabled-tag">Disable</span> Text Updates </label>
     <input type="submit" value="Disable">
     <% else %>
-    <label>Enable Text Updates </label>
+    <label><span id="enabled-tag">Enable</span> Text Updates </label>
     <input type="submit" value="Enable">
     <% end %>
   </form>
