--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,7 +17,7 @@
 
 <% if @group.description %>
   <strong><h3>Description</h3></strong>
-  <p id="description_size"><%= @group.description %></p>
+  <div class="bigdesc"><%= @group.description %></bigdesc>
   <hr>
 <% end %>
 
