desc 2em 2nd try

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,7 +17,7 @@
 
 <% if @group.description %>
   <strong><h3>Description</h3></strong>
-  <div class="bigdesc"><%= @group.description %></bigdesc>
+  <div class="bigdesc"><%= @group.description %></div>
   <hr>
 <% end %>
 
