desc size fixed

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <% if @group.description %>
-  <strong><h3><u>Description</u></h3></strong>
+  <strong><h3>Description</h3></strong>
   <h4><%= @group.description %></h4>
   <hr>
 <% end %>
