--- a/app/views/groups/_chat.js.erb
+++ b/app/views/groups/_chat.js.erb
@@ -1,7 +1,7 @@
 var connection;
 
 function setup() {
-  connection = new WebSocket("ws://localhost:8080");
+  connection = new WebSocket("ws://192.168.1.20:8080");
 
   connection.onopen = function() {
     var data = {
