--- a/app/views/groups/chat.html.erb
+++ b/app/views/groups/chat.html.erb
@@ -26,7 +26,7 @@
     <div class="two columns">
       <br>
     </div>
-    <div class="two columns">
+    <div class="two columns help-message">
       <div id="help-button">
         <img src="/icons/panicbutton.png">
       </div>
